# winscard_nfc

./: CMakeLists.txt  README.md  acr122u.c
